--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
-    <title>Cameron Pittman: Portfolio</title>
+    <title>Yana Lapitskaya: Portfolio</title>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet"  media="print">
@@ -14,13 +14,13 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img src="img/my_photo.jpg"></a>
+      <p>Yana Lapitskaya<br><span>Course Attendant</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>I love web development!</strong> I'm too lazy to write my real portfolio. Besides information here can't influence on my final mark. If you want to know more information about me...  <br> Contact me: yanalapitskay@gmail.com
       </div>
 
       <div class="content">
