--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/my_photo.jpg"></a>
+      <a href="/"><img src="img/my_photo-converted.jpg"></a>
       <p>Yana Lapitskaya<br><span>Course Attendant</span></p>
     </header>
 
