--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
         }
         body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; background: #fff;}
         body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
-
-        a { color: #12C; }
-        a:visited { color: #61C; }
-        a:focus { outline: thin dotted; }
-        a:hover, a:active { color: #c00; outline: 0; }
-
         b, strong { font-weight: bold; }
         pre, code { font-family: monospace, monospace; font-size: 1em; }
         ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
@@ -33,30 +27,6 @@
         header img { border-radius: 40px; float: left; }
         header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
         header p span { font-size: 0.8em; font-weight: normal;}
-
-        .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
-          border-bottom: 1px solid #ccc;
-          border-top: 1px solid #ccc;
-        }
-
-        .content { padding: 1em 1em; }
-        .content li { list-style-type: none; font-size: 1.1em;}
-        li img { float:left; padding-right: 1em; }
-        li p { font-size: 0.9em; font-style: italic; }
-
-        footer {
-          padding: 0 0.5em;
-          border-top: 1px solid #ccc;
-        }
-        footer span { float: right; font-style: italic; }
-
-        /* Smartphones (portrait) */
-        @media only screen and (max-width: 480px) {
-          body { font-size: 12px;}
-          header p { padding-left: 4.5em;}
-        }
-        @font-face {font-family: 'Open Sans'; font-style: normal; font-weight: 700; src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v14/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2'); unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215; }
-
     </style>
     <link href="css/print.css" rel="stylesheet" media="print">
 
@@ -106,6 +76,8 @@
       </footer>
     </div>
 
+
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
